# Knight_and_Dungeon

./: .gitignore  README.md  docker-compose.yml  docker-entrypoint.sh  setup_local.sh
backend/: manage.py  pyproject.toml
backend/battle/: urls.py  views.py
backend/battle/utils/: battle_logic.py
backend/buffs/: admin.py  apps.py  models.py
backend/buffs/management/commands/: load_buffs.py
backend/buffs/management/data/: buffs_init.py
backend/buffs/migrations/: 0001_initial.py
backend/buffs/utils/: buff_debuff_logic.py
backend/config_data/: config.py
backend/dungeon/: admin.py  models.py  room_events.py  serializers.py  urls.py  views.py
backend/dungeon/management/commands/: load_dungeon_difficulty.py
backend/dungeon/management/data/: dungeon_difficulty_init.py
backend/dungeon/migrations/: 0001_initial.py
backend/dungeon/utils/: generate_room.py  room_logic.py
backend/enemies/: admin.py  models.py
backend/enemies/management/commands/: load_enemies.py
backend/enemies/migrations/: 0001_initial.py  0002_enemystats_exp_reward.py
backend/heroes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/heroes/migrations/: 0001_initial.py  0002_dungeondifficulty_bonus_exp_buff_and_more.py
backend/heroes/utils/: create_basic_heroes.py
backend/items/: admin.py  models.py  urls.py  views.py
backend/items/utils/: equip_weapon_or_armor.py  items_naming.py
backend/knight_dungeon/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
docker/backend/: dockerfile
(+4 files in other folders)
