[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sergey-Misiuk <sergey.misiuk712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
dj-database-url = "^2.3.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
